--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section id="home" class="jumbotron text-center">
       <img src="img/1.jpg" alt="Gani" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Gani Adi Alzani Rusandi</h1>
-      <p class="lead">Mahasiswa | Penjual Kopi</p>
+      <p class="lead">Mahasiswa | IT | Penjual Kopi</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
